--- a/Frontend/Source/src/app/login/login.component.html
+++ b/Frontend/Source/src/app/login/login.component.html
@@ -26,6 +26,9 @@
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
           </div>
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.minlength">Password must have at least 6 characters</div>
+          </div>
         </div>
         <button [disabled]="loading" class="btn btn-primary">
           <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
