--- a/Frontend/Source/src/app/register/register.component.html
+++ b/Frontend/Source/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <h4 class="card-header">Battleship Ticket Reservation</h4>
     <div class="card-body">
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="nickname">Nickname</label>
           <input
@@ -37,6 +37,9 @@
           />
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
             <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.minlength">Password must have at least 6 characters</div>
           </div>
         </div>
         <div class="form-group">
