--- a/Frontend/Source/src/app/app.component.html
+++ b/Frontend/Source/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="toolbar" role="banner">
+  <span *ngIf="accessPass">Hello, {{ accessPass.player.nickName }}! Welcome to&nbsp;</span>
   <span>The Battleship</span>
   <div class="spacer"></div>
   <div class="links">
