--- a/Frontend/Source/src/app/lobby/lobby.component.html
+++ b/Frontend/Source/src/app/lobby/lobby.component.html
@@ -1,11 +1,14 @@
 ﻿<div class="content" role="main">
   <img src="../assets/battleship.png" alt="Battleship" width="640" />
-
   <p>
     Play battleship now for free!<br />
     Alone against an AI or do you rather play with a friend against the powerful AI?<br />
     Everything is possible!<br />
   </p>
+  <button class="btn btn-primary" (click)="playGame()">
+    <fa-icon [icon]="faPlay"></fa-icon>
+    Play game
+  </button>
 </div>
 
 <section>
