--- a/Frontend/Source/src/app/login/login.component.html
+++ b/Frontend/Source/src/app/login/login.component.html
@@ -34,7 +34,7 @@
           <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
           Login
         </button>
-        <div class="btn" routerLink="/register" routerLinkActive="active">
+        <div class="btn" routerLink="/register">
           Register
         </div>
         <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
