--- a/Frontend/Source/src/app/register/register.component.html
+++ b/Frontend/Source/src/app/register/register.component.html
@@ -58,7 +58,7 @@
           <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
           Register
         </button>
-        <div class="btn" routerLink="/login" routerLinkActive="active">
+        <div class="btn" routerLink="/login">
           Login
         </div>
         <div *ngIf="error" class="alert alert-danger mt-3 mb-0">
