--- a/Frontend/Source/src/app/game-settings/game-settings.component.html
+++ b/Frontend/Source/src/app/game-settings/game-settings.component.html
@@ -67,8 +67,7 @@
             </div>
           </div>
         </div>
-        <button [disabled]="loading" class="btn btn-primary">
-          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+        <button class="btn btn-primary">
           Save
         </button>
         <div class="btn btn-danger" routerLink="/lobby">
